[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.87"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.13.2"
prost-build = "0.13.2"
prost-types = "0.13.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.12.2", features = ["zstd", "tls"] }
tonic-build = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
derive_builder = "0.20.1"
futures = "0.3.30"
itertools = "0.13.0"
proto-builder-trait = { git = "https://github.com/m104ngc4594/proto-builder-trait.git" }
tokio-stream = "0.1.16"
rand = "0.8.5"
crm-metadata = { path = "crm-metadata" }
crm-send = { path = "crm-send" }
user-stat = { path = "user-stat" }
