[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono"] }
tokio-stream = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
